# all-sides-telegram

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  docker-compose.yml.example
data/: COPYRIGHT  allsides-main-page.html  allsides-story.html  post-template.handlebars
src/: config.rs  loader.rs  main.rs  scraper.rs  state.rs  tg_bot.rs
